# promqlcli

./: .env.example  Cargo.toml  README.md  justfile  rlsr.yml
.github/workflows/: release.yml
src/: main.rs
